syntax = "proto3";

package erda.apps.aiproxy.client_model_relation;
option go_package = "github.com/erda-project/erda-proto-go/apps/aiproxy/client_model_relation/pb";

import "google/api/annotations.proto";
import "apps/aiproxy/metadata/metadata.proto";
import "apps/aiproxy/model/model.proto";
import "common/http.proto";
import "google/protobuf/timestamp.proto";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

service ClientModelRelationService {
    rpc Allocate(AllocateRequest) returns (common.VoidResponse) {
        option(google.api.http) = {
            post: "/api/ai-proxy/clients/{clientId}/actions/allocate-models"
        };
    }

    rpc UnAllocate(AllocateRequest) returns (common.VoidResponse) {
        option(google.api.http) = {
            post: "/api/ai-proxy/clients/{clientId}/actions/unallocate-models"
        };
    }

    rpc ListClientModels(ListClientModelsRequest) returns (ListAllocatedModelsResponse) {
        option(google.api.http) = {
            get: "/api/ai-proxy/clients/{clientId}/actions/list-models"
        };
    }

    rpc Paging(PagingRequest) returns (PagingResponse) {
        option(google.api.http) = {
            get: "/api/ai-proxy/client-model-relations"
        };
    }
}

message ClientModelRelation {
    string id = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;
    google.protobuf.Timestamp deletedAt = 4;

    string clientId = 5;
    string modelId = 6;
}

message AllocateRequest {
    string clientId = 1 [(validate.rules).string = {len: 36}];
    repeated string modelIds = 2 [(validate.rules).repeated = {unique: true, items: {string: {len: 36}}}];
}

message ListAllocatedModelsResponse {
    string clientId = 1 [(validate.rules).string = {len: 36}];
    repeated string modelIds = 2 [(validate.rules).repeated = {unique: true, items: {string: {len: 36}}}];
}

message ListClientModelsRequest {
    string clientId = 1 [(validate.rules).string = {len: 36}];
    repeated model.ModelType modelTypes = 2;
}

message PagingRequest {
    uint64 pageNum = 1 [(validate.rules).uint64 = {ignore_empty: true, gte: 1}];
    uint64 pageSize = 2 [(validate.rules).uint64 = {ignore_empty: true, gte: 1, lte: 1000}];
    repeated string clientIds = 3 [(validate.rules).repeated = {unique: true, items: {string: {len: 36}}}];
    repeated string modelIds = 4 [(validate.rules).repeated = {unique: true, items: {string: {len: 36}}}];
    repeated string orderBys = 5 [(validate.rules).repeated.items.string = {ignore_empty: true, min_len: 2, max_len: 32}];
}

message PagingResponse {
    int64 total = 1;
    repeated ClientModelRelation list = 2;
}
